# like

./: Cargo.toml
benches/: bench.rs
src/: automata.rs  cat.rs  dfa.rs  lib.rs  matchers.rs  nfa.rs  patterns.rs  tokens.rs
src/snapshots/: like__patterns__tests__%.snap  like__patterns__tests__%abc.snap  like__patterns__tests__%hello%.snap  like__patterns__tests__%hello%to%the%__world%.snap  like__patterns__tests__%hello%to%the%__world%__.snap  like__patterns__tests__%hello%to%the%__world__%.snap  like__patterns__tests__%hello%to%the%__world__.snap  like__patterns__tests__%hello%to%the%world%.snap  like__patterns__tests__%hello%to%the%world.snap  like__patterns__tests__.snap  like__patterns__tests___%_%_.snap  like__patterns__tests___.snap  like__patterns__tests__________.snap  like__patterns__tests___x_.snap  like__patterns__tests__abc%.snap  like__patterns__tests__hello.snap  like__patterns__tests__lo%rld.snap  like__patterns__tests__x__y.snap
