[package]
name = "like"
version = "0.1.0"
edition = "2021"

[lib]
name = "like"
path = "src/lib.rs"

[[bin]]
name = "profile"
path = "src/bin/profile.rs"

[dependencies]
memchr = "2.7.4"
clap = { version = "4.5.18", features = ["derive"] }
insta = "1.42.1"

[dev-dependencies]
proptest = "1.6.0"
criterion = "0.5.1"
regex = "1.11.1"
wildmatch = "2.4.0"
insta = "1.42.1"
wildcard = "0.3.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
